--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Home#index</h1>
+<!-- <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
 
@@ -6,3 +6,8 @@
 <%= link_to "Perfil", edit_user_registration_path %>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+
+-->
+
+
+<div id= "app" ></div>
